fixed quiz on mobile
Former-commit-id: d687e7b0cecb85fb6a38746952b32b177c8b8485 [formerly c068bfe6eb2748e4de0a4b10bf0b3f0a1c3b6383]
Former-commit-id: eb040ce8cfd9be9c282b420c8ec039ec26d1a8ba

--- a/src/styles/Quiz/quizcomponent.module.scss
+++ b/src/styles/Quiz/quizcomponent.module.scss
@@ -490,6 +490,8 @@
 }
 @media only screen and (max-width: 860px) {
   .quiz {
+    min-height: fit-content;
+    padding-bottom: 10px;
     .result {
       font-size: 13px;
       width: 90%;
@@ -519,6 +521,7 @@
       flex-wrap: wrap;
       justify-content: center;
       margin-top: 20px;
+      padding-bottom: 10vh;
       .option {
         margin: 5px;
         height: 50px;
